--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 <h1>Curso Universidad HTML</h1>
-<p>Mi primer pagina HTML</p>
+<p>Repaso sobre HTML</p>
 </body>
+<h2>Ejemplo de HTML</h2>
+<p>Este es un ejemplo de un documento HTML básico.</p>
     
     
 </html>
