"HTML me aburre"

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html> 
 <head>
 <title>Universidad HTML</title>
+<meta charset="UTF-8"/>
 </head>
 <body>
 <h1>Curso Universidad HTML</h1>
-<p>Repaso sobre HTML</p>
+<p>Repaso sobre HTML y CSS</p>
+<p>Las páginas podran tener acentos con charset</p>
+<p>HTML no es un lenguaje de programación</p>
 </body>
 <h2>Ejemplo de HTML</h2>
 <p>Este es un ejemplo de un documento HTML básico.</p>
